--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_in/asset_stock_goods_in_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_in/asset_stock_goods_in_form.html
@@ -2,7 +2,7 @@
 /**
  * 库存物品单 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-21 21:20:19
+ * @since 2022-04-23 07:42:40
  */
  -->
  <!DOCTYPE html>
@@ -37,11 +37,11 @@
          <!--开始：group 循环-->
 
 
-        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-9269-fieldset">
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-8171-fieldset">
             <legend>基本信息</legend>
         </fieldset>
 
-        <div class="layui-row form-row" id="random-9269-content">
+        <div class="layui-row form-row" id="random-8171-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -56,9 +56,9 @@
 
                 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('单据类型')}">单据类型</div></div>
+                        <div class="layui-form-label "><div th:text="${lang.translate('单据类型')}">单据类型</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block ">
-                            <div id="stockType" input-type="select" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_stock_in_type'}" extraParam="{}"></div>
+                            <div id="stockType" input-type="select" th:data="${'/service-system/sys-dict-item/query-paged-list?dictCode=eam_stock_in_type'}" extraParam="{}"></div>
                         </div>
                     </div>
 
@@ -67,6 +67,14 @@
                         <div class="layui-form-label "><div th:text="${lang.translate('接收人')}">接收人</div></div>
                         <div class="layui-input-block ">
                             <input lay-filter="receiverUserName" id="receiverUserName" name="receiverUserName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('接收人') }" type="text" class="layui-input"  />
+                        </div>
+                    </div>
+
+                                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('管理人')}">管理人</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="managerId" id="managerId" name="managerId"  type="hidden" class="layui-input"   />
+                            <button id="managerId-button" type="button" action-type="emp-dialog" class="layui-btn   " style="width: 100%"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择人员')}" th:default-label="${lang.translate('请选择人员')}">按钮文本</span></button>
                         </div>
                     </div>
 
@@ -86,19 +94,27 @@
 
 
                                     <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('所属公司')}">所属公司</div></div>
-                        <div class="layui-input-block ">
-                            <input lay-filter="ownCompanyId" id="ownCompanyId" name="ownCompanyId"  type="hidden" class="layui-input"   />
-                            <button id="ownCompanyId-button" type="button" action-type="org-dialog" class="layui-btn   " style="width: 100%"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择公司')}" th:default-label="${lang.translate('请选择公司')}">按钮文本</span></button>
-                        </div>
-                    </div>
-
-                                    <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('供应商')}">供应商</div></div>
                         <div class="layui-input-block ">
                             <input lay-filter="supplierName" id="supplierName" name="supplierName" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('供应商') }" type="text" class="layui-input"  />
                         </div>
                     </div>
+
+                                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('批次号')}">批次号</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="batchCode" id="batchCode" name="batchCode" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('批次号') }" type="text" class="layui-input"  />
+                        </div>
+                    </div>
+
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('总金额')}">总金额</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="amount" id="amount" name="amount" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('总金额') }" type="text" class="layui-input"   autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="true" step="1.0"   scale="0" />
+                        </div>
+                    </div>
+
 
                 <!--结束：栏次内字段循环-->
             </div>
@@ -123,35 +139,7 @@
                         </div>
                     </div>
 
-                <!--结束：栏次内字段循环-->
-            </div>
-            <!--结束：栏次输入框循环-->
-        </div>
-         <!--开始：group 循环-->
-
-
-
-        <div class="layui-row form-row" id="random-0120-content">
-
-             <!--开始：column 循环-->
-            <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
-            <div class="layui-col-xs4 form-column"  style="padding-top: 0px" >
-
-                    <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('管理人')}">管理人</div></div>
-                        <div class="layui-input-block ">
-                            <input lay-filter="managerId" id="managerId" name="managerId"  type="hidden" class="layui-input"   />
-                            <button id="managerId-button" type="button" action-type="emp-dialog" class="layui-btn   " style="width: 100%"> <i class='layui-icon layui-icon-search'></i> <span th:text="${lang.translate('请选择人员')}" th:default-label="${lang.translate('请选择人员')}">按钮文本</span></button>
-                        </div>
-                    </div>
-
-                <!--结束：栏次内字段循环-->
-            </div>
-             <!--开始：column 循环-->
-            <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
-            <div class="layui-col-xs4 form-column"  style="padding-top: 0px" >
-
-
+                
                     <div class="layui-form-item" >
                         <div class="layui-form-label "><div th:text="${lang.translate('购置日期')}">购置日期</div></div>
                         <div class="layui-input-block ">
@@ -161,28 +149,13 @@
 
                 <!--结束：栏次内字段循环-->
             </div>
-             <!--开始：column 循环-->
-            <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
-            <div class="layui-col-xs4 form-column"  style="padding-top: 0px" >
-
-
-                    <div class="layui-form-item" >
-                        <div class="layui-form-label "><div th:text="${lang.translate('总金额')}">总金额</div></div>
-                        <div class="layui-input-block ">
-                            <input lay-filter="amount" id="amount" name="amount" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('总金额') }" type="text" class="layui-input"   autocomplete="off" input-type="number_input" integer="false" decimal="true" allow-negative="true" step="1.0"   scale="0" />
-                        </div>
-                    </div>
-
-
-                <!--结束：栏次内字段循环-->
-            </div>
             <!--结束：栏次输入框循环-->
         </div>
          <!--开始：group 循环-->
 
 
 
-        <div class="layui-row form-row" id="random-3484-content">
+        <div class="layui-row form-row" id="random-8574-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -215,10 +188,10 @@
         </div>
          <!--开始：group 循环-->
 
-        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-1716-fieldset">
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-8195-fieldset">
         <legend>物品列表</legend>
         </fieldset>
-        <div class="layui-row form-row" style="text-align: center;" id="random-1716-content">
+        <div class="layui-row form-row" style="text-align: center;" id="random-8195-content">
             <div style="display: inline-block;padding-right: 8px;padding-left: 8px" class="layui-col-xs12">
             <iframe js-fn="goodsSelectList" class="form-iframe" frameborder="0" style="width: 100%"></iframe>
             </div>
@@ -246,7 +219,7 @@
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
-    var VALIDATE_CONFIG={"businessDate":{"date":true,"labelInForm":"业务时间","inputType":"date_input"},"purchaseDate":{"date":true,"labelInForm":"购置日期","inputType":"date_input"},"warehouseId":{"labelInForm":"仓库","inputType":"select_box","required":true},"name":{"labelInForm":"单据名称","inputType":"text_input","required":true}};
+    var VALIDATE_CONFIG={"businessDate":{"date":true,"labelInForm":"业务时间","inputType":"date_input"},"purchaseDate":{"date":true,"labelInForm":"购置日期","inputType":"date_input"},"stockType":{"labelInForm":"单据类型","inputType":"select_box","required":true},"warehouseId":{"labelInForm":"仓库","inputType":"select_box","required":true},"name":{"labelInForm":"单据名称","inputType":"text_input","required":true}};
     var AUTH_PREFIX="eam_asset_stock_goods_in";
 
     // OWNER_TYPE
