--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_tranfer/asset_stock_goods_tranfer_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_tranfer/asset_stock_goods_tranfer_form.html
@@ -2,7 +2,7 @@
 /**
  * 库存调拨 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-21 06:06:59
+ * @since 2022-04-23 07:42:09
  */
  -->
  <!DOCTYPE html>
@@ -32,27 +32,111 @@
 
     <form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
 
+        <input name="id" id="id"  type="hidden"/>
 
          <!--开始：group 循环-->
 
 
 
-        <div class="layui-row form-row" id="random-7051-content">
+        <div class="layui-row form-row" id="random-1341-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
-            <div class="layui-col-xs12 form-column" >
+            <div class="layui-col-xs4 form-column" >
 
-                    <div class="layui-form-item" style="display: none">
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('主键')}">主键</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="id" id="id" name="id" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('主键') }" type="text" class="layui-input"  />
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('业务名称')}">业务名称</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block ">
+                            <input lay-filter="name" id="name" name="name" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('业务名称') }" type="text" class="layui-input"    lay-verify="|required"  />
+                        </div>
+                    </div>
+
+                
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('业务日期')}">业务日期</div></div>
+                        <div class="layui-input-block ">
+                            <input input-type="date" lay-filter="businessDate" id="businessDate" name="businessDate"  autocomplete="off"  readonly  th:placeholder="${ lang.translate('请选择') +''+ lang.translate('业务日期') }" type="text" class="layui-input"    lay-verify=""   />
                         </div>
                     </div>
 
                 <!--结束：栏次内字段循环-->
             </div>
+             <!--开始：column 循环-->
+            <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
+            <div class="layui-col-xs4 form-column" >
+
+
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('调出仓库')}">调出仓库</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block ">
+                            <div id="warehouseOutId" input-type="select" th:data="${'/service-eam/eam-warehouse/query-paged-list'}" extraParam="{}"></div>
+                        </div>
+                    </div>
+
+
+                <!--结束：栏次内字段循环-->
+            </div>
+             <!--开始：column 循环-->
+            <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
+            <div class="layui-col-xs4 form-column" >
+
+
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('调入仓库')}">调入仓库</div><div class="layui-required">*</div></div>
+                        <div class="layui-input-block ">
+                            <div id="warehouseInId" input-type="select" th:data="${'/service-eam/eam-warehouse/query-paged-list'}" extraParam="{}"></div>
+                        </div>
+                    </div>
+
+
+                <!--结束：栏次内字段循环-->
+            </div>
             <!--结束：栏次输入框循环-->
+        </div>
+         <!--开始：group 循环-->
+
+
+
+        <div class="layui-row form-row" id="random-5579-content">
+
+             <!--开始：column 循环-->
+            <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
+            <div class="layui-col-xs12 form-column"  style="padding-top: 0px" >
+
+
+                    <div class="layui-form-item" >
+                    <div class="layui-form-label "><div th:text="${lang.translate('转移说明')}">转移说明</div></div>
+                    <div class="layui-input-block ">
+                        <textarea lay-filter="content" id="content" name="content" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('转移说明') }" class="layui-textarea" style="height: 60px" ></textarea>
+                    </div>
+                </div>
+
+
+                
+                <div class="layui-form-item" >
+                    <div class="layui-form-label "><div th:text="${lang.translate('附件')}">附件</div></div>
+                    <div class="layui-upload layui-input-block ">
+                        <input input-type="upload" id="attachId"  name="attachId" lay-filter="attachId" style="display: none">
+                        <button type="button" class="layui-btn" id="attachId-button" th:text="${lang.translate('选择附件')}">选择附件</button>
+                        <div class="layui-upload-list" id="attachId-file-list"></div>
+                    </div>
+                </div>
+
+
+
+                <!--结束：栏次内字段循环-->
+            </div>
+            <!--结束：栏次输入框循环-->
+        </div>
+         <!--开始：group 循环-->
+
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-8884-fieldset">
+        <legend>物品列表</legend>
+        </fieldset>
+        <div class="layui-row form-row" style="text-align: center;" id="random-8884-content">
+            <div style="display: inline-block;padding-right: 8px;padding-left: 8px" class="layui-col-xs12">
+            <iframe js-fn="goodsSelectList" class="form-iframe" frameborder="0" style="width: 100%"></iframe>
+            </div>
         </div>
         <!--结束：group循环-->
 
@@ -76,9 +160,11 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var VALIDATE_CONFIG={};
+    var VALIDATE_CONFIG={"warehouseOutId":{"labelInForm":"调出仓库","inputType":"select_box","required":true},"businessDate":{"date":true,"labelInForm":"业务日期","inputType":"date_input"},"warehouseInId":{"labelInForm":"调入仓库","inputType":"select_box","required":true},"name":{"labelInForm":"业务名称","inputType":"text_input","required":true}};
     var AUTH_PREFIX="eam_asset_stock_goods_tranfer";
 
+    // OWNER_TYPE
+    var OWNER_TYPE = [[${ownerType}]] ;
 
 </script>
 
