--- a/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock_goods/goods_stock_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock_goods/goods_stock_list.html
@@ -2,7 +2,7 @@
 /**
  * 库存物品 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-20 21:44:14
+ * @since 2022-04-22 06:25:06
  */
  -->
  <!DOCTYPE html>
@@ -39,16 +39,19 @@
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
                     <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 所属 , ownerId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 所属 , ownerTmpId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 库存所属 , ownerCode ,typeName=text_input, isHideInSearch=true -->
                     <!-- 所属类型 , ownerType ,typeName=text_input, isHideInSearch=true -->
                     <!-- 业务编号 , businessCode ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 办理状态 , status ,typeName=select_box, isHideInSearch=true -->
+                    <!-- 状态 , goodsStatus ,typeName=select_box, isHideInSearch=true -->
                     <!-- 分类 , categoryId ,typeName=select_box, isHideInSearch=true -->
-                    <!-- 状态 , status ,typeName=select_box, isHideInSearch=false -->
+                    <!-- 厂商 , manufacturerId ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('状态')}" class="search-label status-label">状态</span><span class="search-colon">:</span></div>
-                        <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.common.StatusEnableEnum')}" style="width:150px" extraParam="{}"></div>
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('厂商')}" class="search-label manufacturerId-label">厂商</span><span class="search-colon">:</span></div>
+                        <div id="manufacturerId" th:data="${'/service-eam/eam-manufacturer/query-list'}" style="width:150px" extraParam="{}"></div>
                     </div>
-                    <!-- 规格型号 , model ,typeName=text_input, isHideInSearch=true -->
                     <!-- 默认单价 , unitPrice ,typeName=number_input, isHideInSearch=true -->
                     <!-- 计量单位 , unit ,typeName=text_input, isHideInSearch=true -->
                     <!-- 安全库存下限 , stockMin ,typeName=number_input, isHideInSearch=true -->
@@ -58,8 +61,8 @@
                     <!-- 备注 , notes ,typeName=text_area, isHideInSearch=true -->
                     <!-- 批次号 , batchCode ,typeName=text_input, isHideInSearch=true -->
                     <!-- 所属公司 , ownCompanyId ,typeName=button, isHideInSearch=true -->
-                    <!-- 所属组织 , useOrgId ,typeName=button, isHideInSearch=true -->
-                    <!-- 资产供应商 , supplierId ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 使用组织 , useOrgId ,typeName=button, isHideInSearch=true -->
+                    <!-- 供应商 , supplierName ,typeName=text_input, isHideInSearch=true -->
                     <!-- 仓库 , warehouseId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 来源 , sourceId ,typeName=select_box, isHideInSearch=true -->
                     <!-- 物品 , goodsId ,typeName=select_box, isHideInSearch=true -->
@@ -76,15 +79,18 @@
                     <!-- 计量单位 , goodsUnit ,typeName=select_box, isHideInSearch=true -->
                     <!-- 物品编码 , goodsCode ,typeName=select_box, isHideInSearch=true -->
                     <!-- 物品条码 , goodsBarCode ,typeName=select_box, isHideInSearch=true -->
-                    <!-- 厂商 , manufacturerId ,typeName=select_box, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('厂商')}" class="search-label manufacturerId-label">厂商</span><span class="search-colon">:</span></div>
-                        <div id="manufacturerId" th:data="${'/service-eam/eam-manufacturer/query-list'}" style="width:150px" extraParam="{}"></div>
-                    </div>
+                    <!-- goodsStockMax , goodsStockMax ,typeName=text_input, isHideInSearch=true -->
+                    <!-- goodsStockMin , goodsStockMin ,typeName=text_input, isHideInSearch=true -->
+                    <!-- goodsStockSecurity , goodsStockSecurity ,typeName=text_input, isHideInSearch=true -->
                     <!-- 品牌 , brandId ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
-                        <div class="search-label-div" style="width:100px"><span th:text="${lang.translate('品牌')}" class="search-label brandId-label">品牌</span><span class="search-colon">:</span></div>
+                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('品牌')}" class="search-label brandId-label">品牌</span><span class="search-colon">:</span></div>
                         <div id="brandId" th:data="${'/service-eam/eam-brand/query-paged-list'}" style="width:150px" extraParam="{}"></div>
+                    </div>
+                    <!-- 规格型号 , model ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style="width:100px"><span th:text="${lang.translate('规格型号')}" class="search-label model-label">规格型号</span><span class="search-colon">:</span></div>
+                        <input id="model" class="layui-input search-input" style="width: 150px" type="text" />
                     </div>
 
 
@@ -154,7 +160,8 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
-    var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusEnableEnum')}]];
+    var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
+    var SELECT_GOODSSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusEnableEnum')}]];
     var AUTH_PREFIX="eam_goods_stock";
 
     // OWNER_CODE
